localization işlemi yapıldı

27.03
lower wage uppderdan düşükse hata validasyonu 
profil resmi değiştirme eklenecek

01.03
apiye post atma eklendi
giriş yapma işlemi eklendi
dönen tokenen işlenmesi eklendi
bu yapı clean code yapısına göre uyarlandı
loading işlemi güncellendi
02.03
drawer içi düzenlendi
profil iş ilanı ekleme ve kayıtlı ilanlar sayfasına yönlendirme eklendi
kaydedilen iş ilanlarının listelendiği sayfa eklendi
04.03
email validasyonu güncellendi
home pagedeki profil satır sayısı güncellendi
giriş ekranındaki intro screen güncellendi
tc numarası telefon numarası olarak güncellendi
05.03
eklentiler yapıldı
kaydedilen ilanlar sayfasında ilanlar artık başarılı bir şekilde siliniyor.
kaydedilen ilanlar şirket anasayfasından da kaldırıldı
iş ilanı ekleme kısmına son tarih eklendi
ilanı düzenlerken son tarihi önceki oluşturulan ilan tarihi olarak getiriliyor düzenlendi
son tarih iş detayı sayfasına eklendi
birkaç küçük yeni update atıldı
06.03
iş ilanlarını kategorilere ayırmak için butonlar eklendi (pasif aktfi tümü gibi)
componentleri oluşturuldu
yeni drawer görünümü güncellendi
çıkış butonu eklendi
drawer arka plan rengi güncellendi
07.03
kaydedilen ilanların anasayfadan kalırma işlemi tamamlandı
ilan kaydetme butonu güncellendi
aktif pasif ilan bilgisi eklendi
ilanları aktif pasif hale getirme özelliği eklendi
dateTimedan birden fazla tarih seçince imleç gözükme hatası çözüldü
filtre butonlarının rengi güncellendi
enum yapısı oluşturuldu
08.03
filtreleme işlemi tamamlandı
uygulamadan çıkış yapma eklendi  
save bug çözüldü
09.03
company apisine bağlanıldı
10.03
apiden veriler çekildi
şirketin ilanlarım sayfası apiye göre güncellendi
entity oluşturuldu
ilan detay sayfası buna göre güncellendi
apiden gelen veriler ilan güncelleme sayfasında listeleniyor.
11.03
giriş işleminin seçileceği sayfa tasarlandı
// Hatalar

düzenlemeden sonra diğer sayfaya gelince snackbar butonu yukarı itiyor
ilan tarihi eklenecek (geçerlilik tarihi ve oluşturma tarihi)






